Realizo la maquetacion completa, falta configurar el index.js y las rutas para levantar el servidor! mañana ya estara funcionando y en dos semanas  viene largamos el proyecto

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,4 +1,22 @@
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords"
+    content="DEPARTAMENTOS MAR DEL PLATA, alquiler, ventas, temporada, estudiantes, turistas, turismos, pago con efectivo, debito y credito." />
+<meta name="description"
+    content="Bienvenídos! departamentos mar del plata es una applicacion web donde puedes alquilar de forma facil y dinamica departamentos, esta aplicacion ademas te permite poder contactarte con el dueño directo sin necesidad de inmobhiliaria." />
+<!-- Estilos de pagina Stylesheet OPCIONAL-->
+<link rel="stylesheet" href="/css/style.css">
+<!-- StyleSheet de la seccion PROYECTOS-->
+<link rel="stylesheet" href="/css/project.css">
+<!-- Stylesheet de la seccion EXPERIENCIA-->
+<link rel="stylesheet" href="/css/experience.css">
+<!-- Fuentes-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+    integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+<!--Datos del Aos-->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<!-- Favicon -->
+<!--El estilo de pestaña puede variar dependiendo el foco(links.js)-->
+<link id='favicon' rel="shortcut icon" href="/images/favicon.png" type="image/x-png">
+<title>Portfolio | Federico Dorigatti</title>
