--- a/src/views/layouts/boilerplate.ejs
+++ b/src/views/layouts/boilerplate.ejs
@@ -2,28 +2,9 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords"
-        content="DoriAss Desing, portafolio, frontend, portafolio personal, diseño de portafolio, sitio web de portafolio, personal" />
-    <meta name="description"
-        content="Bienvenidos al Portafolio de DoriAss. Un apasionado desarrollador web Full Stack. Un estudiante entusiasta que está intrigado por las cosas que lo rodean." />
-    <!-- Estilos de pagina Stylesheet -->
+    <%- include('./partials/head') %>
+   <!-- Estilos de pagina Stylesheet-->
     <link rel="stylesheet" href="/css/style.css">
-    <!-- StyleSheet de la seccion PROYECTOS-->
-    <link rel="stylesheet" href="/css/project.css">
-    <!-- Stylesheet de la seccion EXPERIENCIA-->
-    <link rel="stylesheet" href="/css/experience.css">
-    <!-- Fuentes-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-    <!--Datos del Aos-->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!-- Favicon -->
-    <!--El estilo de pestaña puede variar dependiendo el foco(links.js)-->
-    <link id='favicon' rel="shortcut icon" href="/images/favicon.png" type="image/x-png">
-    <title>Portfolio | Federico Dorigatti</title>
 </head>
 
 <body oncontextmenu="return false">
@@ -33,54 +14,8 @@
     <%-include('../partials/header.ejs')%>
     <%- body %>
     <%-include('../partials/footer.ejs')%>
-    <!-- ==== scrip de todos los JAVASCRIPT ==== -->
-    <!-- jquery cdn -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- typed.js cdn -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"
-        integrity="sha512-1KbKusm/hAtkX5FScVR5G36wodIMnVd/aP04af06iyQTkD17szAMGNmxfNH+tEuFp3Og/P5G32L1qEC47CZbUQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-    <!-- particle.js links -->
-    <script src="/js/particles.min.js"></script>
-    <script src="/js/app.js"></script>
-
-    <!-- Vanilla tilt.js -->
-    <script src="/js/vanilla-tilt.js"></script>
-
-    <!--Animaciones del Scroll-->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-    <!-- Animaciones del ScrollReveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!-- ==== Fin del los CDN de todos los JAVASCRIPT ==== -->
-    <!-- Desarrollo en javascrip para algunas funciones-->
-    <script src="/js/script.js"></script>
-    <script>
-        {
-            /* Funciones de Cursor*/
-            const cursor = document.querySelector(".cursor");
-            // Agrego estilo a la ubicación del cursor cada vez que se mueve (CURSOR FALSO)
-            document.addEventListener("mousemove", (event) => {
-                cursor.setAttribute(
-                    "style",
-                    `top: ${event.pageY - scrollY - 10}px ; left: ${event.pageX - 10}px`
-                );
-            });
-
-            document.addEventListener("click", () => {
-                cursor.classList.add("expand");
-
-                setTimeout(() => {
-                    cursor.classList.remove("expand");
-                }, 500);
-            });
-        }
-    </script>
+    <!-- scripts -->
+    <%- include('../partials/scripts') %>
 </body>
 
 </html>
