--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,12 +1,10 @@
 <!-- Bolierplate -->
 <%- layout('layouts/boilerplate') %>
-    <!-- loader -->
-    <%- layout('layouts/mouse') %>
 
-   <!-- Perfil -->
-   <%- layout('secctions/about') %>
+<!-- Perfil -->
+    <%- include('secctions/about') %>
 
-  <section class="bg-black">
+  <!-- <section class="bg-black">
     <div class="flex flex-col items-center px-6 py-8 mx-auto">
         <div class="w-full bg-white rounded-lg">
             <div class="p6 space-y-4">
@@ -14,4 +12,4 @@
             </div>
         </div>
     </div>
-  </section>
+  </section> -->
