--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,8 +1,10 @@
 <!-- Bolierplate -->
 <%- layout('layouts/boilerplate') %>
 
+
+
 <!-- Perfil -->
-    <%- include('secctions/about') %>
+<%- include('secctions/about.ejs') %>
 
   <!-- <section class="bg-black">
     <div class="flex flex-col items-center px-6 py-8 mx-auto">
