--- a/src/views/layouts/boilerplate.ejs
+++ b/src/views/layouts/boilerplate.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <!-- Incluciones -->
+    <!-- Mouse -->
+    <%- include('../layouts/mouse') %>
+    <%- include('../layouts/loader') %>
     <%- include('../partials/header.ejs') %>
     <%- body %>
     <%- include('../partials/footer.ejs') %>
