Creo las migraciones de seuqlice y la base de datos por alwaysdata, tranto de hacer las migraciones y me da error de usuario

--- a/src/views/layouts/boilerplate.ejs
+++ b/src/views/layouts/boilerplate.ejs
@@ -5,6 +5,14 @@
     <%- include('../partials/head') %>
    <!-- Estilos de pagina Stylesheet-->
     <link rel="stylesheet" href="/css/style.css">
+    <!-- StyleSheet de la seccion NAVBAR-->
+    <link rel="stylesheet" href="/css/navbar.css">
+    <!-- Stylesheet de la seccion FOOTER-->
+    <link rel="stylesheet" href="/css/footer.css">
+    <!-- Favicon -->
+    <!--El estilo de pestaña puede variar dependiendo el foco(links.js)-->
+    <link id='favicon' rel="shortcut icon" href="/images/favicon3.png" type="image/x-png">
+    <title>Departamentos | Mar del Plata</title>
 </head>
 <body>
     <!-- Incluciones -->
