--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -7,16 +7,14 @@
     content="Bienvenídos! departamentos mar del plata es una applicacion web donde puedes alquilar de forma facil y dinamica departamentos, esta aplicacion ademas te permite poder contactarte con el dueño directo sin necesidad de inmobhiliaria." />
 <!-- Estilos de pagina Stylesheet OPCIONAL-->
 <link rel="stylesheet" href="/css/style.css">
-<!-- StyleSheet de la seccion PROYECTOS-->
-<link rel="stylesheet" href="/css/project.css">
-<!-- Stylesheet de la seccion EXPERIENCIA-->
-<link rel="stylesheet" href="/css/experience.css">
+<!-- StyleSheet de la seccion LOADER-->
+<link rel="stylesheet" href="/css/loader.css">
+<!-- Stylesheet de la seccion ABOUT-->
+<link rel="stylesheet" href="/css/aboutStyle.css">
+<!-- Stylesheet de la seccion PRODUCTS-->
+<link rel="stylesheet" href="/css/productsStyle.css">
 <!-- Fuentes-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 <!--Datos del Aos-->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-<!-- Favicon -->
-<!--El estilo de pestaña puede variar dependiendo el foco(links.js)-->
-<link id='favicon' rel="shortcut icon" href="/images/favicon.png" type="image/x-png">
-<title>Portfolio | Federico Dorigatti</title>
