--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <!-- inicio del nav -->
 <header>
-    <a href="/" class="logo"><i class="fab fa-asymmetrik"></i></i> DoriAss</a>
+    <a href="/" class="logo"><img src="images/logofavicon11.png" alt="logo_departamentos_mar_del_plata"></i></i> Departamentos</a>
 
     <div id="menu" class="fas fa-bars"></div>
     <nav class="navbar">
