--- a/src/views/secctions/about.ejs
+++ b/src/views/secctions/about.ejs
@@ -5,15 +5,14 @@
     <div class="row">
 
         <div class="image">
-            <img draggable="false" class="tilt" src="images/perfile/About.png" alt="">
+            <img draggable="false" class="tilt" src="images/favicon2.png" alt="">
         </div>
         <div class="content">
-            <h3>Yo soy Federico</h3>
-            <span class="tag">Desarrollador FullStack apasionado</span>
-            <p>Realizo programacion en
-                Informática. Un trabajador del sector IT. Soy una persona curiosa y
-                aprender nuevas tecnologías me resulta muy tentador. Un desarrollador con muchas capacidades y ganas
-                de seguir aprendiendo, marcando la diferencia! Solo es dedicacion y confianza, paginas totalmente didacticas.</p>
+            <h3>Alquiler & Ventas </h3>
+            <span class="tag">Departamentos Mar del Plata</span>
+            <p>Alquilá y vende al instante, con la mejor eficacia, sin requisitos y todos los medios de pagos.
+                Temporada, contratos, inmobiliarias y dueño directo. Aprovecha ya!
+            </p>
 
             <div class="box-container">
             <div class="box">
