--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,8 @@
 
 <!-- Perfil -->
 <%- include('secctions/about.ejs') %>
+<!-- Products -->
+<%- include('secctions/products.ejs') %>
 
   <!-- <section class="bg-black">
     <div class="flex flex-col items-center px-6 py-8 mx-auto">
