--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,22 @@
 <!-- Bolierplate -->
 <%- layout('layouts/boilerplate') %>
 
+<main>
+  <div class="container mt-5">
 
+    <!--Section: Products v.3-->
+    <section class="text-center mb-4">
+
+      <!--Grid row-->
+      <div class="row wow fadeIn">
+        <% products.forEach( prod=> { %>
+          <%- include('./partials/producto' ,{prod}) %>
+
+            <% } ) %>
+      </div>
+      <!--Grid row-->
+    </section>
+  </div>
 
 <!-- Perfil -->
 <%- include('secctions/about.ejs') %>
