--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,4 +15,106 @@
         </ul>
     </nav>
 </header>
+
+<nav class="navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
+    <div class="container">
+
+        <!-- Logo-->
+        <a class="navbar-brand waves-effect" href="/">
+            <strong class="blue-text">TecnoHogar Web</strong>
+        </a>
+
+
+        <!-- Collapse -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Diseño Nav -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+            <!-- Banda Derecha -->
+            <ul class="navbar-nav mr-auto align-items-center">
+                <li class="nav-item <%= locals.active == '' ? 'active':'' %> ">
+                    <a class="nav-link waves-effect" href="/">Inicio
+                        <% if (locals.active=='/' ) { %>
+
+                            <span class="sr-only">(current)</span>
+                            <% } %>
+                    </a>
+                </li>
+                <li class="nav-item <%= locals.active == 'products' ? 'active':'' %>">
+                    <a class="nav-link waves-effect" href="/products">Productos</a>
+                    <% if (locals.active=='products' ) { %>
+
+                        <span class="sr-only">(current)</span>
+                        <% } %>
+                </li>
+                <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                        Nosotros
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li>
+                            <a class="quienes_somos dropdown-item" href="/nosotros/nuestra-empresa">
+                                Nuestra empresa
+                            </a>
+                        </li>
+                        <li>
+                            <a class="nuestros_clientes dropdown-item" href="/nosotros/nuestros-clientes">
+                                Nuestros clientes
+                            </a>
+                        </li>
+                        <li>
+                            <a class="empresas_confiaron dropdown-item" href="/nosotros/afiliados">
+                                Empresas que confian
+                            </a>
+                        </li>
+                    </ul>
+                </li> -->
+                <% if (locals.userFound) { %> <!--si hay usuario .. -->
+                    <li class="nav-item  <%= locals.active == 'profile' ? 'active':'' %>">
+                        <a class="nav-link waves-effect" href="/profile">Mi Cuenta </a>
+                    </li>
+                    <li class="nav-item">
+                        <form action="/logout" method="POST">
+                            <button class="btn-link btn py-2 px-3 m-0 nav-link waves-effect"><i
+                                    class="fas fa-sign-out-alt"></i></button>
+                        </form>
+                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/login">Ingreso</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link waves-effect" href="/register">Registro</a>
+                        </li>
+                        <% } %>
+            </ul>
+
+            <!-- Banda Izquierda -->
+            <ul class="navbar-nav nav-flex-icons">
+                <li class="nav-item">
+                    <a class="nav-link waves-effect mr-2 pr-4" href="/cart">
+                        <i class="fas fa-shopping-cart"></i>
+                        <span class="clearfix d-none d-sm-inline-block"> Carrito </span>
+                        <span class="badge red z-depth-1 mr-1 cart-number">0</span>
+                    </a>
+                </li>
+
+
+
+                <li class="nav-item">
+                        <a href="https://github.com/F-DoriAssan"
+                                class="nav-link border border-light rounded waves-effect" target="_blank">
+                            <i class="fab fa-github mr-2"></i>Repositorio
+                         </a>
+                    </li>
+            </ul>
+
+        </div>
+
+    </div>
+</nav>
 <!-- fin del nav-->
