agrego los contenidos para cambiar de rama

--- a/src/views/errors/500.ejs
+++ b/src/views/errors/500.ejs
@@ -9,7 +9,7 @@
   <%- include('../partials/header') %>
     <main class="error">
       <div class="container wow fadeIn animated">
-        <h1>Ocurrió un error</h1>
+        <h1>Ocurrió un error 500</h1>
       </div>
     </main>
 </body>
