--- a/src/views/errors/404.ejs
+++ b/src/views/errors/404.ejs
@@ -9,7 +9,7 @@
   <%- include('../partials/header') %>
     <main class="error">
       <div class="container wow fadeIn animated">
-        <h1>Pagina no encontrada</h1>
+        <h1>Pagina no encontrada 404</h1>
       </div>
     </main>
 </body>
