--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -2,13 +2,11 @@
 <html lang="es">
 
 <head>
-  <%- include('../partials/head') %>
-
-    <link rel="stylesheet" href="/css/auth.css">
+  <%- include('../layouts/boilerplate') %>
 </head>
 
 <body>
-  <%- include('../partials/header') %>
+  <%- include('../partials/boilerplate) %>
     <main class="py-5 login">
       <div class="card shadow my-5" style="min-width: 300px;">
         <form class="card-body" action="/login" method="POST">
@@ -41,8 +39,6 @@
         </form>
       </div>
     </main>
-    <%- include('../partials/footer') %>
-      <%- include('../partials/scripts') %>
 </body>
 
 </html>
